--- a/StrengthFaithHope.Domain/StrengthFaithHope.Domain.csproj
+++ b/StrengthFaithHope.Domain/StrengthFaithHope.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.1.2" />
+  </ItemGroup>
+
 </Project>
