--- a/StrengthFaithHope.Domain/StrengthFaithHope.Domain.csproj
+++ b/StrengthFaithHope.Domain/StrengthFaithHope.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
